git added refrsh token logic, cleaned code and fixed bugs